Clone Edit file TranThiHuyenTrang - 1911143863

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
     <h1>
         <%= title %>
     </h1>
-    <p>Welcome to
+    <p>Welcome to Huyen Trang
         <%= title %>
     </p>
     <p>Sua lan 1</p>
